Bug 282257 - Dolphin crashed [ QCoreApplication::notifyInternal ]
Summary: Dolphin crashed [ QCoreApplication::notifyInternal ]
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.7
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 279871 283332 283711 285317 285388 286979 289797 292776 303968 304480 304897 304927 305262 305645 306177 306801 308049 308830 310597 311397 312377 315651 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-09-18 08:25 UTC by Usul
Modified: 2013-02-22 21:13 UTC (History)
24 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.4
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (4.75 KB, text/plain)
2012-08-07 03:58 UTC, darkfish
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Usul 2011-09-18 08:25:45 UTC
Application: dolphin (1.7)
KDE Platform Version: 4.7.00 (4.7.0)
Qt Version: 4.7.2
Operating System: Linux 2.6.38-11-generic x86_64
Distribution: Ubuntu 11.04

-- Information about the crash:
- What I was doing when the application crashed:
It is removing a video file dolphin crashed.
For split, I wanted to delete a video file.

-- Backtrace:
Application: Dolphin (dolphin), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f437e820780 (LWP 14753))]

Thread 4 (Thread 0x7f436c33f700 (LWP 14754)):
#0  __pthread_mutex_unlock_usercnt (mutex=0x1ab4378) at pthread_mutex_unlock.c:53
#1  __pthread_mutex_unlock (mutex=0x1ab4378) at pthread_mutex_unlock.c:290
#2  0x00007f43768d5fef in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f43768d6f9d in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f43768d7639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f437a5c0446 in QEventDispatcherGlib::processEvents (this=0x19b64e0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#6  0x00007f437a594882 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#7  0x00007f437a594abc in QEventLoop::exec (this=0x7f436c33edd0, flags=...) at kernel/qeventloop.cpp:201
#8  0x00007f437a4ab924 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:492
#9  0x00007f437a576c2f in QInotifyFileSystemWatcherEngine::run (this=0x19b3280) at io/qfilesystemwatcher_inotify.cpp:248
#10 0x00007f437a4ae175 in QThreadPrivate::start (arg=0x19b3280) at thread/qthread_unix.cpp:320
#11 0x00007f4376da2d8c in start_thread (arg=0x7f436c33f700) at pthread_create.c:304
#12 0x00007f437e11704d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#13 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f4369642700 (LWP 14758)):
#0  0x00007f437e109f03 in __poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=<value optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f43768d7104 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f43768d7639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f437a5c0446 in QEventDispatcherGlib::processEvents (this=0x1b640e0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007f437a594882 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f437a594abc in QEventLoop::exec (this=0x7f4369641dd0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007f437a4ab924 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:492
#7  0x00007f437a576c2f in QInotifyFileSystemWatcherEngine::run (this=0x1ecfd00) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f437a4ae175 in QThreadPrivate::start (arg=0x1ecfd00) at thread/qthread_unix.cpp:320
#9  0x00007f4376da2d8c in start_thread (arg=0x7f4369642700) at pthread_create.c:304
#10 0x00007f437e11704d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f4368e3a700 (LWP 14767)):
#0  0x00007f437e10f143 in select () at ../sysdeps/unix/syscall-template.S:82
#1  0x00007f437a576501 in QProcessManager::run (this=0x7f437a8c8f60) at io/qprocess_unix.cpp:245
#2  0x00007f437a4ae175 in QThreadPrivate::start (arg=0x7f437a8c8f60) at thread/qthread_unix.cpp:320
#3  0x00007f4376da2d8c in start_thread (arg=0x7f4368e3a700) at pthread_create.c:304
#4  0x00007f437e11704d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f437e820780 (LWP 14753)):
[KCrash Handler]
#6  QCoreApplication::notifyInternal (this=0x7fff93f4e470, receiver=0x21e45a0, event=0x7fff93f4d9f0) at kernel/qcoreapplication.cpp:718
#7  0x00007f437af502bd in sendEvent (enter=0x21e45a0, leave=<value optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#8  QApplicationPrivate::dispatchEnterLeave (enter=0x21e45a0, leave=<value optimized out>) at kernel/qapplication.cpp:2786
#9  0x00007f437afd0c97 in QApplication::x11ProcessEvent (this=0x7fff93f4e470, event=0x7fff93f4e100) at kernel/qapplication_x11.cpp:3753
#10 0x00007f437aff9842 in x11EventSourceDispatch (s=0x182b890, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#11 0x00007f43768d6bcd in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#12 0x00007f43768d73a8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#13 0x00007f43768d7639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#14 0x00007f437a5c03ef in QEventDispatcherGlib::processEvents (this=0x17e1db0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#15 0x00007f437aff94de in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#16 0x00007f437a594882 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#17 0x00007f437a594abc in QEventLoop::exec (this=0x7fff93f4e400, flags=...) at kernel/qeventloop.cpp:201
#18 0x00007f437a598ecb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#19 0x00007f437e40f48b in kdemain (argc=5, argv=0x7fff93f4e958) at ../../../dolphin/src/main.cpp:85
#20 0x00007f437e04feff in __libc_start_main (main=0x400740 <main(int, char**)>, argc=5, ubp_av=0x7fff93f4e958, init=<value optimized out>, fini=<value optimized out>, rtld_fini=<value optimized out>, stack_end=0x7fff93f4e948) at libc-start.c:226
#21 0x0000000000400669 in _start ()

Possible duplicates by query: bug 282067, bug 280972, bug 280181, bug 279871, bug 279526.

Reported using DrKonqi
Comment 1 Peter Penz 2012-02-10 14:03:21 UTC
*** Bug 283332 has been marked as a duplicate of this bug. ***
Comment 2 Peter Penz 2012-02-10 14:03:50 UTC
*** Bug 283711 has been marked as a duplicate of this bug. ***
Comment 3 Peter Penz 2012-02-10 14:04:59 UTC
*** Bug 285317 has been marked as a duplicate of this bug. ***
Comment 4 Peter Penz 2012-02-10 14:05:24 UTC
*** Bug 285388 has been marked as a duplicate of this bug. ***
Comment 5 Peter Penz 2012-02-10 14:12:47 UTC
*** Bug 286979 has been marked as a duplicate of this bug. ***
Comment 6 Jekyll Wu 2012-07-05 11:41:36 UTC
*** Bug 279871 has been marked as a duplicate of this bug. ***
Comment 7 Jekyll Wu 2012-07-05 12:41:51 UTC
*** Bug 289797 has been marked as a duplicate of this bug. ***
Comment 8 Jekyll Wu 2012-07-05 12:52:25 UTC
*** Bug 292776 has been marked as a duplicate of this bug. ***
Comment 9 darkfish 2012-08-07 03:58:10 UTC
Created attachment 73010 [details]
New crash information added by DrKonqi

dolphin (2.0) on KDE Platform 4.8.4 (4.8.4) using Qt 4.8.1

- What I was doing when the application crashed:

I opened a Java application from the Kickoff Application Launcher, however, this seems rather irrelevant. That is so because, while the application was opening in the BG, the mouse pointer was hovering over some file (likely to be a media file) icon in the Dolphin browser. I believe it was trying to generate a preview. 

Additional Information: I have Nepomuk and Strigi turned off.

-- Backtrace (Reduced):
#7  QCoreApplication::notifyInternal (this=0xbf9b32f8, receiver=0x9827cf8, event=0xbf9b2bec) at kernel/qcoreapplication.cpp:864
#8  0xb58aa79b in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#9  QApplicationPrivate::dispatchEnterLeave (enter=0x9827cf8, leave=0xb623eafc) at kernel/qapplication.cpp:2824
#10 0xb5935a25 in QApplication::x11ProcessEvent (this=0xbf9b32f8, event=0xbf9b2f6c) at kernel/qapplication_x11.cpp:3805
#11 0xb5962eac in x11EventSourceDispatch (s=0x902a950, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
Comment 10 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:18:39 UTC
Resetting assignee to default as per bug #305719
Comment 11 Frank Reininghaus 2012-11-24 04:05:18 UTC
*** Bug 303968 has been marked as a duplicate of this bug. ***
Comment 12 Frank Reininghaus 2012-11-24 04:05:25 UTC
*** Bug 304480 has been marked as a duplicate of this bug. ***
Comment 13 Frank Reininghaus 2012-11-24 04:05:31 UTC
*** Bug 304897 has been marked as a duplicate of this bug. ***
Comment 14 Frank Reininghaus 2012-11-24 04:05:37 UTC
*** Bug 304927 has been marked as a duplicate of this bug. ***
Comment 15 Frank Reininghaus 2012-11-24 04:05:42 UTC
*** Bug 305262 has been marked as a duplicate of this bug. ***
Comment 16 Frank Reininghaus 2012-11-24 04:05:47 UTC
*** Bug 305645 has been marked as a duplicate of this bug. ***
Comment 17 Frank Reininghaus 2012-11-24 04:05:55 UTC
*** Bug 306177 has been marked as a duplicate of this bug. ***
Comment 18 Frank Reininghaus 2012-11-24 04:06:00 UTC
*** Bug 306801 has been marked as a duplicate of this bug. ***
Comment 19 Frank Reininghaus 2012-11-24 04:06:07 UTC
*** Bug 308049 has been marked as a duplicate of this bug. ***
Comment 20 Frank Reininghaus 2012-11-24 04:06:16 UTC
*** Bug 308830 has been marked as a duplicate of this bug. ***
Comment 21 Frank Reininghaus 2012-11-24 04:11:21 UTC
Git commit a6f0745284617e3eccd0f69597105771e54aa31b by Frank Reininghaus.
Committed on 24/11/2012 at 05:08.
Pushed by freininghaus into branch 'KDE/4.9'.

Delete FileMetaDataToolTip using deleteLater() to prevent crashes

The problem was that Qt tried to deliver an 'Enter' event to the
dangling pointer that once pointed to the tool tip.

Many thanks to G. Christ for finding a way to reproduce this crash!
Related: bug 310579
FIXED-IN: 4.9.4

M  +3    -1    dolphin/src/views/tooltips/tooltipmanager.cpp

http://commits.kde.org/kde-baseapps/a6f0745284617e3eccd0f69597105771e54aa31b
Comment 22 Frank Reininghaus 2012-11-24 04:14:17 UTC
I'm confident that all reports marked as duplicates are about the same issue because they all have the same pattern (crash in QCoreApplication::notifyInternal() after QApplicationPrivate::dispatchEnterLeave()). In the unlikely event that a crash with such a backtrace still happens in KDE 4.9.4 or later, please file a new report about it.

Thanks to everyone who reported this issue!
Comment 23 Frank Reininghaus 2012-11-24 11:53:54 UTC
*** Bug 310597 has been marked as a duplicate of this bug. ***
Comment 24 Frank Schaefer 2012-11-24 12:08:21 UTC
(In reply to comment #22)
> Thanks to everyone who reported this issue!

Thank you for fixing this issue and the commendable bug report handling !
Comment 25 Frank Reininghaus 2012-12-09 10:53:27 UTC
*** Bug 311397 has been marked as a duplicate of this bug. ***
Comment 26 Frank Reininghaus 2013-01-03 08:23:16 UTC
*** Bug 312377 has been marked as a duplicate of this bug. ***
Comment 27 Frank Reininghaus 2013-02-22 21:13:01 UTC
*** Bug 315651 has been marked as a duplicate of this bug. ***