Delete FileMetaDataToolTip using deleteLater() to prevent crashes

The problem was that Qt tried to deliver an 'Enter' event to the
dangling pointer that once pointed to the tool tip.

Many thanks to G. Christ for finding a way to reproduce this crash!

BUG: 282257
BUG: 310579
FIXED-IN: 4.9.4